--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in version 1.8.9000
+
+o Custom for BETEL
+
 Changes in version 1.6-2
 
 o Fixed a bug with iterative GMM from the previous version
